# devsecops_vulnerabilities

./: .env  .env.example  README.md  main.tf  pyproject.toml
.github/workflows/: security-agent.yaml
secagent/: agent.py  cli.py  git_ops.py  remediator.py  repo.py
secagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
